[package]
name = "print"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = {version = "1", features = ["full"] }
stats_alloc ="0.1"
crossbeam = "0.8"

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}

[[bench]]
name = "tail_latency"
harness = false
